src/css/style.css
/* ... */
/* ------------------------  Desktop Navigation Button Text ------------------------ */

/* Adds the icon styling to the h1 text and hides it with opacity */
.icon h1 {
  /* @include icon-style (); */
  display: flex;
  margin: 8px;
  justify-content: center;
  align-items: center;
  font-size: 40px;
  height: 56px;

  /* Independant declarations */
  position: fixed;
  color: #bee1e6; /* add $primary-color */
  opacity: 0;
  transition: 1s;
  transition-timing-function: ease-in;
  -webkit-transition: 1s;
  -moz-transition: 1s;
  -ms-transition: 1s;
  -o-transition: 1s;
}

/* ------------------------  Home Button ------------------------ */

/* This positions the home button border, the box shadow and adds a transition timer */
.icon_border.home {
  /* @include nav-button-style (); */
  position: fixed;
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  transition: 1s;
  transition-timing-function: ease-out;
  -webkit-transition: 1s;
  -moz-transition: 1s;
  -ms-transition: 1s;
  -o-transition: 1s;

  /* independant declarations */
  left: 32px;
  top: 32px;
}

/* This transforms the box shadow to wrap around the "HOME" navigation text */
.icon_border.home:hover {
  padding: 16px 96px;
}

/* This positions the home icon */
.fa-home {
  display: flex;
  position: fixed;
  left: 32px;
  top: 32px;
  color: #bee1e6; /* add $primary-color */
}

/* This positions the "HOME" text next to the home icon */
.home_txt {
  left: 88px;
  top: 32px;
}

/* This unhides the "HOME" text when the user hovers over the icon using opacity */
.home_wrapper:hover .home_txt {
  /* @include hover-text (); */
  display: flex;
  opacity: 100%;
  transition: opacity 1.5s;
  transition-timing-function: ease-in;
  -webkit-transition: opacity 1.5s;
  -moz-transition: opacity 1.5s;
  -ms-transition: opacity 1.5s;
  -o-transition: opacity 1.5s;
}

/* ------------------------  About Button ------------------------ */

/* This positions the about button border, the box shadow and adds a transition timer */
.icon_border.about {
  /* @include nav-button-style (); */
  position: fixed;
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  transition: 1s;
  transition-timing-function: ease-out;
  -webkit-transition: 1s;
  -moz-transition: 1s;
  -ms-transition: 1s;
  -o-transition: 1s;

  /* independant declarations */
  right: 32px;
  top: 32px;
}

/* This transforms the box shadow to wrap around the "ABOUT" navigation text */
.icon_border.about:hover {
  padding: 16px 106px;
}

/* This positions the info icon */
.fa-info {
  display: flex;
  position: fixed;
  right: 32px;
  top: 32px;
  color: #bee1e6; /* add $primary-color */
}

/* This positions the "ABOUT" text next to the info icon */
.about_txt {
  right: 88px;
  top: 32px;
}

/* This unhides the "ABOUT" text when the user hovers over the icon using opacity */
.about_wrapper:hover .about_txt {
  /* @include hover-text (); */
  display: flex;
  opacity: 100%;
  transition: opacity 1.5s;
  transition-timing-function: ease-in;
  -webkit-transition: opacity 1.5s;
  -moz-transition: opacity 1.5s;
  -ms-transition: opacity 1.5s;
  -o-transition: opacity 1.5s;
}

/* ------------------------  Blog Button ------------------------ */

/* This positions the blog button border, the box shadow and adds a transition timer */
.icon_border.blog {
  /* @include nav-button-style (); */
  position: fixed;
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  transition: 1s;
  transition-timing-function: ease-out;
  -webkit-transition: 1s;
  -moz-transition: 1s;
  -ms-transition: 1s;
  -o-transition: 1s;

  /* independant declarations */
  right: 32px;
  bottom: 32px;
}

/* This transforms the box shadow to wrap around the "BLOG" navigation text */
.icon_border.blog:hover {
  padding: 16px 92px;
}

/* This positions the pen icon */
.fa-pen {
  display: flex;
  position: fixed;
  right: 32px;
  bottom: 32px;
  color: #bee1e6; /* add $primary-color */
}

/* This positions the "BLOG" text next to the pen icon */
.blog_txt {
  right: 88px;
  bottom: 32px;
}

/* This unhides the "BLOG" text when the user hovers over the icon using opacity */
.blog_wrapper:hover .blog_txt {
  /* @include hover-text (); */
  display: flex;
  opacity: 100%;
  transition: opacity 1.5s;
  transition-timing-function: ease-in;
  -webkit-transition: opacity 1.5s;
  -moz-transition: opacity 1.5s;
  -ms-transition: opacity 1.5s;
  -o-transition: opacity 1.5s;
}

/* ------------------------  Project Button ------------------------ */

/* This positions the projects button border, the box shadow and adds a transition timer */
.icon_border.projects_icon {
  /* @include nav-button-style (); */
  position: fixed;
  box-shadow: 0 4px 4px 0 #fff1e6, 4px 0 4px 0 #fad2e1, 0 -4px 4px 0 #bee1e6,
    -4px 0 4px 0 #cddafd;
  transition: 1s;
  transition-timing-function: ease-out;
  -webkit-transition: 1s;
  -moz-transition: 1s;
  -ms-transition: 1s;
  -o-transition: 1s;

  /* independant declarations */
  left: 32px;
  bottom: 32px;
}

/* This transforms the box shadow to wrap around the "PROJECTS" navigation text */
.icon_border.projects_icon:hover {
  padding: 16px 136px;
}

/* This positions the briefcase icon */
.fa-briefcase {
  display: flex;
  position: fixed;
  left: 32px;
  bottom: 32px;
  color: #bee1e6; /* add $primary-color */
}

/* This positions the "PROJECTS" text next to the briefcase icon */
.projects_txt {
  left: 88px;
  bottom: 32px;
}

/* This unhides the "PROJECTS" text when the user hovers over the icon using opacity */
.projects_wrapper:hover .projects_txt {
  /* @include hover-text (); */
  display: flex;
  opacity: 100%;
  transition: opacity 1.5s;
  transition-timing-function: ease-in;
  -webkit-transition: opacity 1.5s;
  -moz-transition: opacity 1.5s;
  -ms-transition: opacity 1.5s;
  -o-transition: opacity 1.5s;
}
/* ... */

